--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,7 +1,7 @@
 ### Play 2.3.x
-#application.global = eu.unicredit.Global
+#application.global = com.github.romastyi.Global
 
 ### Play 2.4.x, 2.5.x
 play.application.loader = scaldi.play.ScaldiApplicationLoader
 play.modules.enabled += scaldi.play.ControllerInjector
-play.modules.enabled += eu.unicredit.ServicesModule
+play.modules.enabled += com.github.romastyi.ServicesModule
