CircuitBreaker pattern implementation (like Lagom).

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 ### Play 2.3.x
-#application.global = com.github.romastyi.Global
+#application.global = com.github.romastyi.GlobalServer
 
 ### Play 2.4.x, 2.5.x
 play.application.loader = scaldi.play.ScaldiApplicationLoader
