Jwt session between services.

--- a/api/src/main/resources/reference.conf
+++ b/api/src/main/resources/reference.conf
@@ -1,1 +1,3 @@
 play.application.loader = scaldi.play.ScaldiApplicationLoader
+play.modules.enabled += scaldi.play.ControllerInjector
+play.modules.enabled += com.github.romastyi.api.client.dsl.WebServicesComponents
