--- a/petStore-api/src/main/swagger/petStore.yaml
+++ b/petStore-api/src/main/swagger/petStore.yaml
@@ -19,6 +19,15 @@ consumes:
   - application/json
 produces:
   - application/json
+securityDefinitions:
+  session:
+    type: apiKey
+    name: Authorization
+    in: header
+  jwt:
+    type: apiKey
+    name: Authorization
+    in: header
 paths:
   /pets:
     get:
@@ -60,7 +69,7 @@ paths:
           schema:
             $ref: '#/definitions/ErrorModel'
       security:
-      - session:
+      - jwt:
     post:
       description: Creates a new pet in the store.  Duplicates are allowed
       operationId: addPet
@@ -83,7 +92,7 @@ paths:
           schema:
             $ref: '#/definitions/ErrorModel'
       security:
-      - session:
+      - jwt:
         - "roles:admin,api"
         - "capability:some"
   /pets/{id}:
