--- a/petStore-api/src/main/swagger/petStore.yaml
+++ b/petStore-api/src/main/swagger/petStore.yaml
@@ -120,6 +120,8 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/ErrorModel'
+      security:
+        - jwt:
     delete:
       description: deletes a single pet based on the ID supplied
       operationId: deletePet
@@ -137,6 +139,9 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/ErrorModel'
+      security:
+        - jwt:
+          - "roles:admin,api"
   /pets/{tag}:
     get:
       description: Returns a user based on a single tag, if the user does not have access to the pet
@@ -164,6 +169,8 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/ErrorModel'
+      security:
+        - jwt:
 definitions:
   PetTag:
     type: string
