Use Silhouette authentication library instead of Play2-Auth for Play 2.6.x.

--- a/petStore-impl/src/main/resources/reference.conf
+++ b/petStore-impl/src/main/resources/reference.conf
@@ -1,1 +1,6 @@
 play.modules.enabled += com.github.romastyi.api.module.PetStoreComponents
+
+# CSRF Token Filter Configuration
+# ~~~~~
+play.filters.csrf.cookie.name="PLAY_CSRF_TOKEN"
+play.filters.csrf.contentType.blackList=["*"]
