--- a/web-gateway/src/main/resources/application.conf
+++ b/web-gateway/src/main/resources/application.conf
@@ -1,3 +1,4 @@
+play.modules.enabled += com.github.romastyi.api.silhouette.SilhouetteModule
 play.modules.enabled += com.github.romastyi.module.PetStoreClientComponents
 
 discovery {
@@ -43,3 +44,10 @@ circuit-breaker {
   }
 
 }
+
+# CSRF Token Filter Configuration
+# ~~~~~
+play.filters.csrf.cookie.name="PLAY_CSRF_TOKEN"
+play.filters.csrf.contentType.blackList=["*"]
+
+include "silhouette.conf"
