--- a/api/src/main/resources/reference.conf
+++ b/api/src/main/resources/reference.conf
@@ -1,3 +1,5 @@
-play.application.loader = scaldi.play.ScaldiApplicationLoader
+application.global = play.boilerplate.api.scaldi.ScaldiGlobalSettings
+application.secret = mysecret
+
 play.modules.enabled += scaldi.play.ControllerInjector
 play.modules.enabled += com.github.romastyi.api.client.dsl.WebServicesComponents
