--- a/api/src/main/resources/reference.conf
+++ b/api/src/main/resources/reference.conf
@@ -1,3 +1,4 @@
 play.application.loader = scaldi.play.ScaldiApplicationLoader
 play.modules.enabled += scaldi.play.ControllerInjector
+play.modules.enabled += play.boilerplate.api.server.dsl.InjectedRoutesModule
 play.modules.enabled += com.github.romastyi.api.client.dsl.WebServicesComponents
