--- a/petStore-api/src/main/swagger/petStore.yaml
+++ b/petStore-api/src/main/swagger/petStore.yaml
@@ -131,6 +131,42 @@ paths:
       security:
         - jwt:
           - ""
+    post:
+      summary: Updates a pet in the store with form data
+      description: ""
+      operationId: updatePetWithForm
+      consumes:
+        - application/x-www-form-urlencoded
+      produces:
+        - application/xml
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: ID of pet that needs to be updated
+          required: true
+          type: integer
+          format: int64
+        - name: name
+          in: formData
+          description: Updated name of the pet
+          required: true
+          type: string
+        - name: status
+          in: formData
+          description: Updated status of the pet
+          required: false
+          type: string
+      responses:
+        200:
+          description: Pet is updates
+          schema:
+            $ref: '#/definitions/Pet'
+        405:
+          description: Invalid input
+      security:
+        - jwt:
+          - "roles:admin,api"
     delete:
       description: deletes a single pet based on the ID supplied
       operationId: deletePet
@@ -181,6 +217,40 @@ paths:
       security:
         - jwt:
           - ""
+  /pet/{petId}/uploadImage:
+    post:
+      summary: uploads an image
+      description: ""
+      operationId: uploadFile
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - name: petId
+          in: path
+          description: ID of pet to update
+          required: true
+          type: integer
+          format: int64
+        - name: additionalMetadata
+          in: formData
+          description: Additional data to pass to server
+          required: false
+          type: string
+        - name: file
+          in: formData
+          description: file to upload
+          required: true
+          type: file
+      responses:
+        200:
+          description: successful operation
+          schema:
+            $ref: '#/definitions/ApiResponse'
+      security:
+        - jwt:
+          - ""
 definitions:
   PetTag:
     type: string
@@ -214,6 +284,16 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/PetTag'
+  ApiResponse:
+    type: object
+    properties:
+      code:
+        type: integer
+        format: int32
+      type:
+        type: string
+      message:
+        type: string
   LogLevel:
     type: string
     enum: &LOGLEVEL
